<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ExperienceListFragment">

    <!-- Header Section as Modern Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_title"
            android:textColor="@color/text_main"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_profile_avatar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            app:strokeColor="@color/divider"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Horizontal Filter Chips -->
    <HorizontalScrollView
        android:id="@+id/scroll_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_toolbar">

        <LinearLayout
            android:id="@+id/filter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <Button
                android:id="@+id/btn_filter_all"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/filter_all" />

            <Button
                android:id="@+id/btn_filter_nature"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/filter_nature" />

            <Button
                android:id="@+id/btn_filter_culture"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/filter_culture" />

            <Button
                android:id="@+id/btn_filter_gastronomy"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/filter_gastronomy" />

            <Button
                android:id="@+id/btn_filter_adventure"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_adventure" />
        </LinearLayout>
    </HorizontalScrollView>

    <!-- List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_experiences"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_filters"
        tools:listitem="@layout/item_experience" />

</androidx.constraintlayout.widget.ConstraintLayout>
